add keyup event

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 	<h1 class="header">Reverse String</h1>
 	<div class="container">
-		<textarea id="userText" placeholder="Please enter text here" onchange="getReverseString()"></textarea>
+		<textarea id="userText" placeholder="Please enter text here" onkeyup="getReverseString()"></textarea>
 		<textarea id="convertedText" placeholder="Reversed string will appear here"></textarea>
 		<button id="copyBtn" class="btn" onclick="copyTextToClipboard()">Copy text</button>
 		<!-- <button id="reverseBtn" class="btn" onclick="getReverseString()">Reverse String</button> -->
